// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts index (Left Nav) snapshot matches snapshot with a few account with one selected 1`] = `
<nav
  className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
>
  <div
    className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root"
    >
      <a
        aria-describedby={null}
        aria-disabled={false}
        aria-label="New account"
        className="MuiButtonBase-root MuiIconButton-root"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        title="New account"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding"
  >
    <div>
      <li
        className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <InstitutionIcon
            institution="BMO"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-dense"
          title="BMO"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            BMO
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root MuiList-dense MuiList-padding"
      >
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
            href="/accounts/3/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                $3,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/3/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <li
        className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <InstitutionIcon
            institution="TD"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-dense"
          title="TD"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            TD
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root MuiList-dense MuiList-padding"
      >
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction Mui-selected"
            href="/accounts/1/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                CA$1,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/1/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                CA$2,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</nav>
`;

exports[`Accounts index (Left Nav) snapshot matches with a few accounts but none selected 1`] = `
<nav
  className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
>
  <div
    className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root"
    >
      <a
        aria-describedby={null}
        aria-disabled={false}
        aria-label="New account"
        className="MuiButtonBase-root MuiIconButton-root"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        title="New account"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding"
  >
    <div>
      <li
        className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <InstitutionIcon
            institution="BMO"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-dense"
          title="BMO"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            BMO
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root MuiList-dense MuiList-padding"
      >
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
            href="/accounts/3/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                $3,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/3/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <li
        className="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <InstitutionIcon
            institution="TD"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-dense"
          title="TD"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            TD
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root MuiList-dense MuiList-padding"
      >
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
            href="/accounts/1/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                CA$1,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/1/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
        <li
          className="MuiListItem-container"
        >
          <a
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root MuiListItemText-dense"
            >
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                CA$2,000.00
              </p>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root"
          >
            <a
              aria-describedby={null}
              aria-disabled={false}
              aria-label="Edit account"
              className="MuiButtonBase-root MuiIconButton-root"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              title="Edit account"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</nav>
`;

exports[`Accounts index (Left Nav) snapshot matches with no accounts 1`] = `
<nav
  className="MuiList-root MuiList-dense MuiList-padding MuiList-subheader"
>
  <div
    className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root"
    >
      <a
        aria-describedby={null}
        aria-disabled={false}
        aria-label="New account"
        className="MuiButtonBase-root MuiIconButton-root"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        title="New account"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
  <span
    className="MuiTypography-root MuiTypography-caption"
  >
    You don't have any accounts yet
  </span>
</nav>
`;
